tdf#132939: avoid crash when uninitialized FilterDescriptor

See bt:
https://bugs.documentfoundation.org/attachment.cgi?id=160656

Change-Id: Ifacce7d39878e1b1d119aa878e7280eb3c9c2228
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93959
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 3466488ef22752c8f6f47f7b8f1dac5cc0cb27a2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93989
Reviewed-by: Eike Rathke <erack@redhat.com>